--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <section>
     <h1 id="about">about.</h1>
     <p class="paragraph">My goal is, to learn as much and as fast as possible so I can do my Job properly.</p>
-    <p class="paragraph">I just finshed the final project of my apprenticeship. Where I devloped and Application to generate Marketing Texts from Attributes with the OpenAI-API.</p>
+    <p class="paragraph">I just finshed the final project of my apprenticeship. Where I devloped and application to generate marketing texts from attributes with the OpenAI-API.</p>
     <br/>
     <p>My apprenticeship did not went that well, so I now have to learn a lot by myself and in a short period of time.</p>
-    <p>Since I never did Frontend I have to learn everything from HTML to CSS to Javascript.</p>
+    <p>Since I never did Frontend I'm teaching myself everything from HTML to CSS to Javascript.</p>
 
     <h1 id="cv">cv.</h1>
     <ul>
@@ -48,12 +48,14 @@
         <li><strong>HTML</strong></li>
         <li><strong>CSS</strong></li>
         <li><strong>Javascript</strong></li>
-        <li><strong>React</strong></li>
         <li><strong>PHP</strong></li>
         <li><strong>Symfony</strong></li>
         <li><strong>API Platform</strong></li>
         <li><strong>MySQL</strong></li>
         <li><strong>Git</strong></li>
+
+        <li><strong>English C1</strong></li>
+
     </ul>
     </section>
     
